...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/AccountListHeader"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/GuiNewAccount"
        app:layout_constraintStart_toEndOf="@+id/syncingIcon"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/GuiNewAccount"
            android:layout_width="40dp"
...
